fix: デザイン刷新

--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,12 +1,11 @@
 {
-    "greeting": "こんにちは！",
-    "buttonText": "クリックしてください",
     "appName": "Specify",
-    "top.description": "好きな時間を指定してプレイリストを作成できます。\n30分、1時間、あるいはカスタム時間帯でも構いません。TimeTunesが自動的にランダムで選曲し、理想のプレイリストを提供します。",
-    "auth.login": "ログイン",
+    "top.description1": "時間を指定してプレイリストを作成するツールです。\n30分、1時間、あるいは他の時間でも構いません。\n時間に合わせて曲をランダムで選び、プレイリストを提供します。",
+    "top.description2": "※無料会員は再生中に広告が入る・また、他の曲が混ざるためプレイリストの終了時間と指定した時間が異なる可能性があります",
+    "auth.login": "Spotifyでログイン",
     "auth.logout": "ログアウト",
     "form.specifyTime": "時間を指定",
-    "form.specifyTime.placeholder": "3 ～ 100 の値を入力してください",
+    "form.specifyTime.placeholder": "3 ～ 100",
     "form.includeFavoriteArtists": "お気に入りのアーティストの曲からプレイリストを作成する",
     "form.createPlaylist": "プレイリストを作成",
     "form.deletePlaylist": "プレイリストを削除",
