fix: デザイン修正

--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,7 +1,7 @@
 {
     "appName": "Specify",
     "top.description1": "時間を指定してプレイリストを作成するツールです。\n30分、1時間、あるいは他の時間でも構いません。\n時間に合わせて曲をランダムで選び、プレイリストを提供します。",
-    "top.description2": "※無料会員は再生中に広告が入る・また、他の曲が混ざるためプレイリストの終了時間と指定した時間が異なる可能性があります",
+    "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
     "auth.login": "Spotifyでログイン",
     "auth.logout": "ログアウト",
     "form.specifyTime": "時間を指定",
