--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -10,6 +10,8 @@
     "form.includeFavoriteArtists": "Create a playlist from your favorite artist's songs.",
     "form.createPlaylist": "Create Playlist",
     "form.deletePlaylist": "Delete Playlist",
-    "form.deletePlaylistExplan": "I will delete the playlist created with Specify."
+    "form.deletePlaylistExplan": "I will delete the playlist created with Specify.",
+    "dialog.not.created": "The playlist could not be created.\nPlease try again.",
+    "dialog.createPlaylist.server.error": "A server error has occurred.\nWe apologize for the inconvenience, but please try again later."
   }
   
