--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,5 +1,5 @@
 {
-    "appName": "Specify",
+    "appName": "音楽タイマー",
     "top.description1": "時間を指定してSpotifyのプレイリストを作成するツールです。\n30分、1時間、あるいは他の時間でも構いません。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
     "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
     "auth.login": "Spotifyでログイン",
