--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -4,13 +4,15 @@
     "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
     "auth.login": "Spotifyでログイン",
     "auth.logout": "ログアウト",
-    "form.specifyTime": "時間を指定",
+    "form.specifyTime": "プレイリストの再生時間（分）",
     "form.specifyTime.placeholder": "3 ～ 100",
     "form.includeFavoriteArtists": "お気に入りのアーティストの曲からプレイリストを作成する",
     "form.createPlaylist": "プレイリストを作成",
     "form.deletePlaylist": "プレイリストを削除",
     "form.deletePlaylistExplan": "※アプリ内で作成したプレイリストのみ削除します",
-    "dialog.createPlaylist.not.created": "プレイリストを作成できませんでした。\nお手数ですが、もう一度お試しください。",
-    "dialog.createPlaylist.server.error": "サーバーエラーが発生しました。\nお手数ですが、時間を置いて、もう一度お試しください。"
+    "dialog.createPlaylist.not.created": "プレイリストの作成に失敗しました。\nしばらく時間を置いてから再度試してください。",
+    "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。しばらく時間を置いてから再度試してください。",
+    "toast.playlistDeleted": "プレイリストが削除されました。",
+    "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。しばらく時間を置いてから再度試してください。"
   }
   
