--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -10,7 +10,7 @@
     "form.createPlaylist": "プレイリストを作成",
     "form.deletePlaylist": "プレイリストを削除",
     "form.deletePlaylistExplan": "※アプリ内で作成したプレイリストのみ削除します",
-    "dialog.createPlaylist.not.created": "プレイリストの作成に失敗しました。\nしばらく時間を置いてから再度試してください。",
+    "dialog.createPlaylist.not.created": "プレイリストの作成に失敗しました。\n指定した条件に問題があった可能性があります。条件を見直し再度お試しください。",
     "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。しばらく時間を置いてから再度試してください。",
     "toast.playlistDeleted": "プレイリストが削除されました。",
     "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。しばらく時間を置いてから再度試してください。"
