--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,5 +1,5 @@
 {
-    "appName": "音楽タイマー",
+    "appName": "音楽タイマー for Spotify",
     "top.description1": "再生時間を指定してSpotifyのプレイリストを作成するツールです。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
     "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
     "auth.login": "Spotifyでログイン",
@@ -16,7 +16,7 @@
     "form.deletePlaylistExplan": "※アプリ内で作成したプレイリストのみ削除します",
     "dialog.createPlaylist.loading": "完了まで最大約30秒かかる場合があります。",
     "dialog.createPlaylist.button": "Spotifyで開く",
-    "dialog.createPlaylist.not.created": "プレイリストの作成に失敗しました。\n指定した条件に問題があった可能性があります。\n条件を見直し再度お試しください。",
+    "dialog.createPlaylist.not.created": "指定した条件でプレイリストを作成できませんでした。\n条件を見直し再度お試しください。",
     "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。\nしばらく時間を置いてから再度試してください。",
     "toast.playlistDeleted": "プレイリストが削除されました。",
     "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。\nしばらく時間を置いてから再度試してください。"
