--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,24 +1,25 @@
 {
-    "appName": "音楽タイマー for Spotify",
-    "top.description1": "再生時間を指定してSpotifyのプレイリストを作成するツールです。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
-    "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
-    "auth.login": "Spotifyでログイン",
-    "auth.login.desc": "α版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
-    "auth.login.desc.link": "こちら",
-    "auth.gest": "ゲストユーザー利用",
-    "auth.logout": "ログアウト",
-    "form.specifyTime": "プレイリストの再生時間（分）",
-    "form.specifyTime.placeholder": "3 ～ 100",
-    "form.includeFavoriteArtists": "フォロー中のアーティストから選曲",
-    "form.gest.includeFavoriteArtists.desc": "※ログインユーザーのみ利用可",
-    "form.createPlaylist": "プレイリストを作成",
-    "form.deletePlaylist": "プレイリストを削除",
-    "form.deletePlaylistExplan": "※アプリ内で作成したプレイリストのみ削除します",
-    "dialog.createPlaylist.loading": "プレイリストを作成中...\n完了まで最大約30秒かかる場合があります。",
-    "dialog.createPlaylist.button": "Spotifyで開く",
-    "dialog.createPlaylist.not.created": "指定した条件でプレイリストを作成できませんでした。\n条件を見直し再度お試しください。",
-    "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。\nしばらく時間を置いてから再度試してください。",
-    "toast.playlistDeleted": "プレイリストが削除されました。",
-    "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。\nしばらく時間を置いてから再度試してください。"
-  }
-  
+  "appName": "音楽タイマー for Spotify",
+  "top.description1": "再生時間を指定してSpotifyのプレイリストを作成するツールです。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
+  "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
+  "auth.login": "Spotifyでログイン",
+  "auth.login.desc": "α版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
+  "auth.login.desc.link": "こちら",
+  "auth.gest": "ゲストユーザー利用",
+  "auth.logout": "ログアウト",
+  "form.specifyTime": "プレイリストの再生時間（分）",
+  "form.specifyTime.placeholder": "3 ～ 100",
+  "form.includeFavoriteArtists": "フォロー中のアーティストから選曲",
+  "form.noFollowedArtists": "フォローしているアーティストがいません。",
+  "form.gest.includeFavoriteArtists.desc": "※ログインユーザーのみ利用可",
+  "form.createPlaylist": "プレイリストを作成",
+  "form.deletePlaylist": "プレイリストを削除",
+  "form.deletePlaylistExplan": "※アプリ内で作成したプレイリストのみ削除します",
+  "dialog.createPlaylist.loading": "プレイリストを作成中...\n完了まで最大約30秒かかる場合があります。",
+  "dialog.createPlaylist.open": "Spotifyで開く",
+  "dialog.createPlaylist.close": "閉じる",
+  "dialog.createPlaylist.not.created": "指定した条件でプレイリストを作成できませんでした。\n条件を見直し再度お試しください。",
+  "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。\nしばらく時間を置いてから再度試してください。",
+  "toast.playlistDeleted": "プレイリストが削除されました。",
+  "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。\nしばらく時間を置いてから再度試してください。"
+}
