Add display of annotations

--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,7 +1,8 @@
 {
   "appName": "音楽タイマー for Spotify",
   "top.description1": "再生時間を指定してSpotifyのプレイリストを作成するツールです。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
-  "top.description2": "※Spotify無料プランユーザーは以下の理由でプレイリストの終了時間が指定した時間と異なる場合があります\n ・広告が再生される\n ・プレイリストにSpotifyがおすすめする曲が追加される",
+  "top.description2": "自動再生が有効の場合、プレイリストの再生終了後も続けて曲が再生されます。",
+  "top.description3": "ログインできない場合はブラウザの「サードパーティクッキーをブロック」を解除してください。",
   "auth.login": "Spotifyでログイン",
   "auth.login.desc": "α版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
   "auth.login.desc.link": "こちら",
