Update display text

--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -4,7 +4,7 @@
   "top.description2": "自動再生が有効の場合、プレイリストの再生終了後も続けて曲が再生されます。",
   "top.description3": "ログインできない場合はブラウザの「サードパーティクッキーをブロック」を解除してください。",
   "auth.login": "Spotifyでログイン",
-  "auth.login.desc": "α版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
+  "auth.login.desc": "β版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
   "auth.login.desc.link": "こちら",
   "auth.gest": "ゲストユーザー利用",
   "auth.logout": "ログアウト",
