Prevent multiple delete requests
Added logic to disable the delete button while a delete request is in progress to prevent multiple submissions. Updated UI to indicate loading state during deletion.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -12,6 +12,7 @@
     "form.deletePlaylist": "Delete Playlist",
     "form.deletePlaylistExplan": "I will delete the playlist created with Specify.",
     "dialog.not.created": "The playlist could not be created.\nPlease try again.",
-    "dialog.createPlaylist.server.error": "A server error has occurred.\nWe apologize for the inconvenience, but please try again later."
+    "dialog.createPlaylist.server.error": "A server error has occurred.\nWe apologize for the inconvenience, but please try again later.",
+    "toast.playlistDeleting": "Deleting..."
   }
   
