--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -1,19 +1,28 @@
 {
-    "greeting": "Hello!",
-    "buttonText": "Click Me",
-    "appName": "Specify",
-    "top.description": "Create a playlist by specifying the time.",
-    "auth.login": "Login",
-    "auth.logout": "Logout",
-    "form.specifyTime.minute": "Min",
-    "form.specifyTime.placeholder": "Please enter a value between 3 and 100.",
-    "form.includeFavoriteArtists": "Create a playlist from your favorite artist's songs.",
-    "form.get.followedArtists.error": "Failed to retrieve followed artists.\nPlease try again after some time.",
-    "form.createPlaylist": "Create Playlist",
-    "form.deletePlaylist": "Delete Playlist",
-    "form.deletePlaylistExplan": "I will delete the playlist created with Specify.",
-    "dialog.not.created": "The playlist could not be created.\nPlease try again.",
-    "dialog.createPlaylist.server.error": "A server error has occurred.\nWe apologize for the inconvenience, but please try again later.",
-    "toast.playlistDeleting": "Deleting..."
-  }
-  
+  "appName": "Music Timer for Spotify",
+  "top.description1": "A tool for creating Spotify playlists by specifying playback time.\nIt randomly selects songs according to the time and creates a playlist.",
+  "top.description2": "※ If auto-play is enabled, songs will continue playing even after the playlist ends.",
+  "top.description3": "If you cannot log in, please disable 'Block third-party cookies' in your browser settings.",
+  "auth.login": "Login with Spotify",
+  "auth.login.desc": "Since this is a beta version, you need to apply for an account through the link below to use the app.",
+  "auth.login.desc.link": "Here",
+  "auth.gest": "Use as a guest",
+  "auth.logout": "Logout",
+  "form.specifyTime.minute": "Min",
+  "form.specifyTime.placeholder": "3 ~ 100",
+  "form.includeFavoriteArtists": "Select songs from followed artists",
+  "form.noFollowedArtists": "You do not have any followed artists.",
+  "form.favoriteTracks": "Favorite Tracks",
+  "form.get.followedArtists.error": "Failed to retrieve followed artists.\nPlease try again after some time.",
+  "form.gest.includeFavoriteArtists.desc": "※ Available to logged-in users only",
+  "form.createPlaylist": "Create Playlist",
+  "form.deletePlaylist": "Delete Playlist",
+  "form.deletePlaylistExplan": "※ Only playlists created within the app will be deleted",
+  "dialog.createPlaylist.open": "Open in Spotify",
+  "dialog.createPlaylist.close": "Close",
+  "dialog.createPlaylist.not.created": "The playlist could not be created with the specified conditions.\nPlease review the conditions and try again.",
+  "dialog.createPlaylist.server.error": "The server is currently unavailable.\nPlease try again after some time.",
+  "toast.playlistDeleting": "Deleting...",
+  "toast.playlistDeleted": "The playlist has been deleted.",
+  "toast.playlistDeleteError": "There was a problem deleting the playlist.\nPlease try again after some time."
+}
