--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -8,6 +8,9 @@
   "auth.login.desc.link": "こちら",
   "auth.gest": "ゲストユーザー利用",
   "auth.logout": "ログアウト",
+  "form.specifyTime.required": "再生時間を入力してください。",
+  "form.specifyTime.typeError": "数値のみを入力してください。",
+  "form.specifyTime.range": "再生時間は3分から100分の間で指定してください。",
   "form.specifyTime.minute": "分",
   "form.specifyTime.placeholder": "3 ～ 100",
   "form.includeFavoriteArtists": "フォロー中のアーティストから選曲",
