Hide delete playlist status indication within the app

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -17,13 +17,12 @@
   "form.gest.includeFavoriteArtists.desc": "※ Available to logged-in users only",
   "form.createPlaylist": "Create Playlist",
   "form.deletePlaylist": "Delete Playlist",
-  "form.deletePlaylistExplan": "※ Only playlists created within the app will be deleted",
   "dialog.createPlaylist.open": "Open in Spotify",
   "dialog.createPlaylist.close": "Close",
   "dialog.createPlaylist.not.created": "The playlist could not be created with the specified conditions.\nPlease review the conditions and try again.",
   "dialog.createPlaylist.server.error": "The server is currently unavailable.\nPlease try again after some time.",
   "toast.playlistDeleting": "Deleting...",
-  "toast.playlistDeleted": "The playlist has been deleted.",
+  "toast.playlistDeleted": "The created playlist has been deleted.",
   "toast.playlistDeleteError": "There was a problem deleting the playlist.\nPlease try again after some time.",
   "form.specifyTime.required": "Please enter the playback time.",
   "form.specifyTime.typeError": "Please enter a numeric value only.",
