--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,6 +1,6 @@
 {
   "appName": "音楽タイマー for Spotify",
-  "top.description1": "再生時間を指定してSpotifyのプレイリストを作成するツールです。\n時間に合わせて曲をランダムで選び、プレイリストを作成します。",
+  "top.description1": "指定した再生時間のプレイリストを作成します。",
   "top.description2": "※ 自動再生が有効の場合、プレイリストの再生終了後も続けて曲が再生されます。",
   "top.description3": "ログインできない場合はブラウザの「サードパーティクッキーをブロック」を解除してください。",
   "auth.login": "Spotifyでログイン",
