--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -31,5 +31,5 @@
   "error.timeout": "サーバーからの応答がありません。お手数ですが、しばらく時間を置いて再試行してください。",
   "error.500.home.back": "ホームに戻る",
   "error.500.message": "問題が発生しました",
-  "error.home.description": "一時的にアクセスできない状態です。\n時間を置いて再度お試しください。"
+  "error.500.description": "一時的にアクセスできない状態です。\n時間を置いて再度お試しください。"
 }
