--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -31,5 +31,5 @@
   "auth.logout.failed": "Logout failed. Please wait a moment and try again.",
   "error.500.home.back": "Back to Home",
   "error.500.message": "An issue has occurred",
-  "error.home.description": "The site is temporarily unavailable.\nPlease try again later."
+  "error.500.description": "The site is temporarily unavailable.\nPlease try again later."
 }
