--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -1,5 +1,6 @@
 {
   "appName": "音楽タイマー for Spotify",
+  "header.title": "音楽タイマー",
   "top.description1": "指定した再生時間のプレイリストを作成します。",
   "top.description2": "※ 自動再生が有効の場合、プレイリストの再生終了後も続けて曲が再生されます。",
   "top.description3": "ログインできない場合はブラウザの「サードパーティクッキーをブロック」を解除してください。",
@@ -7,7 +8,6 @@
   "auth.login.desc": "β版のためログインしてアプリを使用するためには、こちらからアカウントの申請が必要です。",
   "auth.login.desc.link": "こちら",
   "auth.gest": "ゲストユーザー利用",
-  "auth.logout": "ログアウト",
   "auth.logout.failed": "ログアウトに失敗しました。お手数ですが、しばらく時間を置いて再試行してください。",
   "form.specifyTime.required": "再生時間を入力してください。",
   "form.specifyTime.typeError": "数値のみを入力してください。",
