feat: fix moden design

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -1,35 +1,40 @@
 {
   "appName": "Music Timer for Spotify",
   "header.title": "Music Timer",
-  "top.description1": "It creates a playlist based on the specified playback time.",
-  "top.description2": "※ If auto-play is enabled, songs will continue playing even after the playlist ends.",
-  "top.description3": "If you cannot log in, please disable 'Block third-party cookies' in your browser settings.",
-  "auth.login": "Login with Spotify",
-  "auth.login.desc": "Since this is a beta version, you need to apply for an account through the link below to use the app.",
+  "top.description1": "Create a playlist with a specified playback time.",
+  "top.description2": "* If auto-play is enabled, songs will continue to play after the playlist ends.",
+  "top.description3": "If you cannot log in, please disable \"Block third-party cookies\" in your browser.",
+  "auth.login": "Log in with Spotify",
+  "auth.login.desc": "Since this is a beta version, you need to apply for an account to use the app.",
   "auth.login.desc.link": "Here",
-  "auth.gest": "Use as a guest",
-  "form.specifyTime.minute": "Min",
+  "auth.gest": "Guest User",
+  "auth.logout.failed": "Logout failed. Please try again after some time.",
+  "form.specifyTime.required": "Please enter playback time.",
+  "form.specifyTime.typeError": "Please enter numbers only.",
+  "form.specifyTime.range": "Please specify playback time between 3 and 100 minutes.",
+  "form.specifyTime.minute": "minutes",
   "form.specifyTime.placeholder": "3 ~ 100",
-  "form.includeFavoriteArtists": "Choose from Artists",
-  "form.noFollowedArtists": "You do not have any followed artists.",
+  "form.includeFavoriteArtists": "Select from Artists",
   "form.favoriteTracks": "Favorite Tracks",
+  "form.noFollowedArtists": "No artists followed.",
   "form.get.followedArtists.error": "Failed to retrieve followed artists.\nPlease try again after some time.",
-  "form.gest.includeFavoriteArtists.desc": "※ Available to logged-in users only",
+  "form.gest.includeFavoriteArtists.desc": "* Available for logged-in users only",
   "form.createPlaylist": "Create Playlist",
   "form.deletePlaylist": "Delete Playlist",
+  "dialog.loading.title": "Preparing Playlist",
+  "dialog.loading.subtitle": "Searching for music...",
+  "dialog.createPlaylist.title": "New Playlist",
   "dialog.createPlaylist.open": "Open in Spotify",
   "dialog.createPlaylist.close": "Close",
-  "dialog.createPlaylist.not.created": "The playlist could not be created with the specified conditions.\nPlease review the conditions and try again.",
-  "dialog.createPlaylist.server.error": "The server is currently unavailable.\nPlease try again after some time.",
+  "dialog.createPlaylist.not.created.title": "Playlist Creation Failed",
+  "dialog.createPlaylist.not.created": "Please review the conditions and try again.",
+  "dialog.createPlaylist.server.error.title": "Cannot Access Server Currently",
+  "dialog.createPlaylist.server.error": "Please try again after some time.",
   "toast.playlistDeleting": "Deleting...",
-  "toast.playlistDeleted": "The created playlist has been deleted.",
-  "toast.playlistDeleteError": "There was a problem deleting the playlist.\nPlease try again after some time.",
-  "form.specifyTime.required": "Please enter the playback time.",
-  "form.specifyTime.typeError": "Please enter a numeric value only.",
-  "form.specifyTime.range": "Playback time must be between 3 and 100 minutes.",
-  "error.timeout": "No response from the server. Please wait a moment and try again.",
-  "auth.logout.failed": "Logout failed. Please wait a moment and try again.",
-  "error.500.home.back": "Back to Home",
+  "toast.playlistDeleted": "Created playlist has been deleted.",
+  "toast.playlistDeleteError": "An issue occurred while deleting the playlist.\nPlease try again after some time.",
+  "error.timeout": "No response from the server. Please try again after some time.",
+  "error.500.home.back": "Return to Home",
   "error.500.message": "An issue has occurred",
-  "error.500.description": "The site is temporarily unavailable.\nPlease try again later."
+  "error.500.description": "Currently unable to access.\nPlease try again after some time."
 }
