--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -21,10 +21,15 @@
   "form.gest.includeFavoriteArtists.desc": "※ログインユーザーのみ利用可",
   "form.createPlaylist": "プレイリストを作成",
   "form.deletePlaylist": "プレイリストを削除",
+  "dialog.loading.title": "プレイリスト準備中",
+  "dialog.loading.subtitle": "音楽を検索しています...",
+  "dialog.createPlaylist.title": "新しいプレイリスト",
   "dialog.createPlaylist.open": "Spotifyで開く",
   "dialog.createPlaylist.close": "閉じる",
-  "dialog.createPlaylist.not.created": "指定した条件でプレイリストを作成できませんでした。\n条件を見直し再度お試しください。",
-  "dialog.createPlaylist.server.error": "現在サーバーにアクセスできません。\nしばらく時間を置いてから再度試してください。",
+  "dialog.createPlaylist.not.created.title": "プレイリスト作成に失敗",
+  "dialog.createPlaylist.not.created": "条件を見直し再度お試しください。",
+  "dialog.createPlaylist.server.error.title": "現在サーバーにアクセスできません。",
+  "dialog.createPlaylist.server.error": "しばらく時間を置いてから再度試してください。",
   "toast.playlistDeleting": "削除中...",
   "toast.playlistDeleted": "作成したプレイリストが削除されました。",
   "toast.playlistDeleteError": "プレイリストの削除中に問題が発生しました。\nしばらく時間を置いてから再度試してください。",
