fix: update minute label and add favorites text in playlist form

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -12,7 +12,7 @@
   "form.specifyTime.required": "Please enter playback time.",
   "form.specifyTime.typeError": "Please enter numbers only.",
   "form.specifyTime.range": "Please specify playback time between 3 and 100 minutes.",
-  "form.specifyTime.minute": "minutes",
+  "form.specifyTime.minute": "Min",
   "form.specifyTime.placeholder": "3 ~ 100",
   "form.includeFavoriteArtists": "Select from Artists",
   "form.favoriteTracks": "Favorite Tracks",
