--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -49,5 +49,7 @@
   "error.token_expired": "認証の有効期限が切れました。ページを更新して再度ログインしてください。",
   "error.playlist_creation_failed": "予期しないエラーが発生しました。条件を確認して再度お試しください。",
   "error.internal_error": "サーバーエラーが発生しました。しばらく時間を置いてから再度お試しください。",
+  "error.timeout_insufficient_tracks": "選択した条件では総再生時間が不足しています。\n再生時間を短くするか、お気に入りのトラックやアーティストを追加してください。",
+  "error.timeout_no_match": "指定した再生時間に合う組み合わせが見つかりませんでした。\n再生時間を変更するか、条件を見直してください。",
   "error.default": "エラーが発生しました。しばらく時間を置いてから再度お試しください。"
 }
