feat: enhance error overlay with dismiss functionality and improved animations
- Added dismissError function to manage manual closure of error messages.
- Updated ErrorOverlay component to include tap-to-close functionality with animations.
- Enhanced styling and animations for a smoother user experience.
- Localized new tap-to-close message in English and Japanese.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -28,6 +28,7 @@
   "dialog.createPlaylist.close": "Close",
   "dialog.createPlaylist.not.created.title": "Playlist Creation Failed",
   "dialog.createPlaylist.not.created": "Please review the conditions and try again.",
+  "dialog.tapToClose": "(Tap to close)",
   "dialog.createPlaylist.server.error.title": "Cannot Access Server Currently",
   "dialog.createPlaylist.server.error": "Please try again after some time.",
   "toast.playlistDeleting": "Deleting...",
