--- a/app/src/locales/ja.json
+++ b/app/src/locales/ja.json
@@ -28,6 +28,7 @@
   "dialog.createPlaylist.close": "閉じる",
   "dialog.createPlaylist.not.created.title": "プレイリストを作成できませんでした",
   "dialog.createPlaylist.not.created": "条件を見直し再度お試しください。",
+  "dialog.tapToClose": "(タップで閉じる)",
   "dialog.createPlaylist.server.error.title": "現在サーバーにアクセスできません。",
   "dialog.createPlaylist.server.error": "しばらく時間を置いてから再度試してください。",
   "toast.playlistDeleting": "削除中...",
