chore: update localization files for English and Japanese
- Removed outdated login instructions and error messages from en.json and ja.json.
- Corrected minor text inconsistencies in the favorite tracks section for both languages.
- Streamlined user guidance for playlist creation and error handling.

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -3,24 +3,13 @@
   "header.title": "Music Timer",
   "top.description1": "Create a playlist with a specified playback time.",
   "top.description2": "* If auto-play is enabled, songs will continue to play after the playlist ends.",
-  "top.description3": "If you cannot log in, please disable \"Block third-party cookies\" in your browser.",
   "auth.login": "Log in with Spotify",
-  "auth.login.desc": "Since this is a beta version, you need to apply for an account to use the app.",
-  "auth.login.desc.link": "Here",
-  "auth.gest": "Guest User",
-  "auth.logout.failed": "Logout failed. Please try again after some time.",
   "form.specifyTime.required": "Please enter playback time.",
   "form.specifyTime.typeError": "Please enter numbers only.",
   "form.specifyTime.range": "Please specify playback time between 3 and 100 minutes.",
   "form.specifyTime.minute": "Min",
   "form.specifyTime.placeholder": "3 ～ 100",
-  "form.includeFavoriteArtists": "Select from Artists",
-  "form.favoriteTracks": "Favorite Tracks",
-  "form.noFollowedArtists": "No artists followed.",
-  "form.get.followedArtists.error": "Failed to retrieve followed artists.\nPlease try again after some time.",
-  "form.gest.includeFavoriteArtists.desc": "* Available for logged-in users only",
   "form.createPlaylist": "Create Playlist",
-  "form.deletePlaylist": "Delete Playlist",
   "dialog.loading.title": "Preparing Playlist",
   "dialog.loading.subtitle": "Searching for music...",
   "dialog.createPlaylist.title": "New Playlist",
@@ -29,19 +18,17 @@
   "dialog.createPlaylist.not.created.title": "Playlist Creation Failed",
   "dialog.createPlaylist.not.created": "Please review the conditions and try again.",
   "dialog.tapToClose": "(Tap to close)",
-  "dialog.createPlaylist.server.error.title": "Cannot Access Server Currently",
   "dialog.createPlaylist.server.error": "Please try again after some time.",
   "toast.playlistDeleting": "Deleting...",
   "toast.playlistDeleted": "Created playlist has been deleted.",
   "toast.playlistDeleteError": "An issue occurred while deleting the playlist.\nPlease try again after some time.",
-  "error.timeout": "No response from the server. Please try again after some time.",
   "error.500.home.back": "Return to Home",
   "error.500.message": "An issue has occurred",
   "error.500.description": "Currently unable to access.\nPlease try again after some time.",
   "createPlaylist.followedArtistsEmpty": "You can select songs from artists you follow.\nFollow artists on Spotify to see them here.",
   "createPlaylist.findArtists": "Find on Spotify",
   "createPlaylist.findArtistsTitle": "Find Artists",
-  "createPlaylist.favoriteTracks": "Favorites Tracks",
+  "createPlaylist.favoriteTracks": "Favorite Tracks",
   "error.not_enough_tracks": "Insufficient tracks. Shorten the playback time or add more artists.",
   "error.no_favorite_tracks": "No favorite tracks found. Like songs on Spotify or select artists.",
   "error.tracks_not_found": "Tracks not found. Change your conditions and try again.",
